--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Venk Stoyanoph</title>
-</head>
-<body>
-<h1>DJ Venko Stoyanoph</h1>
-<p>Welcome to DJ Venko Stoyanoph’s official site – explore fresh beats, live sets, and exclusive tracks!</p>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Venko Stoyanoph</title><script defer="defer" src="/static/js/main.092476c8.js"></script><link href="/static/css/main.d0ff7157.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
